compiler/tools/fpp-check/test/invalid_symbols/module_as_constant.fpp
module M {
 
  constant a = M

}
